Node beolvasásnál a logika elvoileg jó csak a beolvasás vágja hanyatt magát

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,11 @@
-/input1.txt
-/input2.txt
-/input3.txt
+/feladat/input1.txt
+/feladat/input2.txt
+/feladat/input3.txt
 /out/production/MI/Main.class
 /MI.iml
-/MI_HF_2020_BN.pdf
-/output1.txt
-/output2.txt
-/output3.txt
+/feladat/MI_HF_2020_BN.pdf
+/feladat/output1.txt
+/feladat/output2.txt
+/feladat/output3.txt
 *.class
 *.log
